# Slavka_data_crawler

./: README.md  pyproject.toml
Slavka_data_crawler/: main.py
