[tool.poetry]
name = "Slavka_data_crawler"
version = "0.1.0"
description = ""
authors = ["Viaceslav Vasilasko vvasilasko@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
httpx = "^0.26.0"
selectolax = "^0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
